# serializer version: 1
# name: test_forecast_service[daily]
  dict({
    'weather.home': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 13.3,
          'cloud_coverage': 53,
          'condition': 'partlycloudy',
          'datetime': '2025-02-10T15:00:00Z',
          'humidity': 54,
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 13.3,
          'templow': 1.5,
          'uv_index': 3,
          'wind_bearing': 280,
          'wind_gust_speed': 14.0,
          'wind_speed': 6.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[hourly]
  dict({
    'weather.home': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 12.0,
          'cloud_coverage': 0,
          'condition': 'sunny',
          'datetime': '2025-02-05T23:00:00Z',
          'dew_point': 2.7,
          'humidity': 51,
          'is_daytime': True,
          'precipitation': 0.0,
          'precipitation_probability': 0,
          'pressure': 1019.13,
          'temperature': 12.7,
          'uv_index': 1,
          'wind_bearing': 335,
          'wind_gust_speed': 19.0,
          'wind_speed': 10.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[twice_daily]
  dict({
    'weather.home': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 13.3,
          'cloud_coverage': 53,
          'condition': 'partlycloudy',
          'datetime': '2025-02-10T15:00:00Z',
          'humidity': 54,
          'is_daytime': True,
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 13.3,
          'uv_index': 3,
          'wind_bearing': 280,
          'wind_gust_speed': 14.0,
          'wind_speed': 6.0,
        }),
        dict({
          'apparent_temperature': 1.5,
          'cloud_coverage': 70,
          'condition': 'partlycloudy',
          'datetime': '2025-02-11T03:00:00Z',
          'humidity': 85,
          'is_daytime': False,
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 1.5,
          'uv_index': 0,
          'wind_bearing': 201,
          'wind_gust_speed': 14.0,
          'wind_speed': 6.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_subscription
  list([
    dict({
      'apparent_temperature': 13.3,
      'cloud_coverage': 53,
      'condition': 'partlycloudy',
      'datetime': '2025-02-10T15:00:00Z',
      'humidity': 54,
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 13.3,
      'templow': 1.5,
      'uv_index': 3,
      'wind_bearing': 280,
      'wind_gust_speed': 14.0,
      'wind_speed': 6.0,
    }),
  ])
# ---
# name: test_forecast_subscription.1
  list([
    dict({
      'apparent_temperature': 13.3,
      'cloud_coverage': 53,
      'condition': 'partlycloudy',
      'datetime': '2025-02-10T15:00:00Z',
      'humidity': 54,
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 13.3,
      'templow': 1.5,
      'uv_index': 3,
      'wind_bearing': 280,
      'wind_gust_speed': 14.0,
      'wind_speed': 6.0,
    }),
  ])
# ---
# name: test_weather[weather.home-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'weather',
    'entity_category': None,
    'entity_id': 'weather.home',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'google_weather',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WeatherEntityFeature: 7>,
    'translation_key': None,
    'unique_id': 'home-subentry-id',
    'unit_of_measurement': None,
  })
# ---
# name: test_weather[weather.home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WeatherEntityStateAttribute.APPARENT_TEMPERATURE: 'apparent_temperature'>: 13.1,
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data from Google Weather',
      <WeatherEntityStateAttribute.CLOUD_COVERAGE: 'cloud_coverage'>: 0.0,
      <WeatherEntityStateAttribute.DEW_POINT: 'dew_point'>: 1.1,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Home',
      <WeatherEntityStateAttribute.HUMIDITY: 'humidity'>: 42,
      <WeatherEntityStateAttribute.PRECIPITATION_UNIT: 'precipitation_unit'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      <WeatherEntityStateAttribute.PRESSURE: 'pressure'>: 1019.16,
      <WeatherEntityStateAttribute.PRESSURE_UNIT: 'pressure_unit'>: <UnitOfPressure.HPA: 'hPa'>,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WeatherEntityFeature: 7>,
      <WeatherEntityStateAttribute.TEMPERATURE: 'temperature'>: 13.7,
      <WeatherEntityStateAttribute.TEMPERATURE_UNIT: 'temperature_unit'>: <UnitOfTemperature.CELSIUS: '°C'>,
      <WeatherEntityStateAttribute.UV_INDEX: 'uv_index'>: 1.0,
      <WeatherEntityStateAttribute.VISIBILITY: 'visibility'>: 16.0,
      <WeatherEntityStateAttribute.VISIBILITY_UNIT: 'visibility_unit'>: <UnitOfLength.KILOMETERS: 'km'>,
      <WeatherEntityStateAttribute.WIND_BEARING: 'wind_bearing'>: 335,
      <WeatherEntityStateAttribute.WIND_GUST_SPEED: 'wind_gust_speed'>: 18.0,
      <WeatherEntityStateAttribute.WIND_SPEED: 'wind_speed'>: 8.0,
      <WeatherEntityStateAttribute.WIND_SPEED_UNIT: 'wind_speed_unit'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'sunny',
  })
# ---
